Finition du projet, reste la responsivité

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
                     
                 </div>
                 <div class="main_bottom">
+                    <button class="start">Début</button>
                     <button  class="previous">Précédent</button>
+                    <p class="btn page_minus_two"></p>
+                    <p class="btn page_minus_one"></p>
+                    <p class="btn actu_page"></p>
+                    <p class="btn page_plus_one"></p>
+                    <p class="btn page_plus_two"></p>
                     <button  class="next">Suivant</button>
+                    <button class="end">Fin</button>
                 </div>
             </div>
         </div> 
